<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/size_15dp">

    <LinearLayout
        android:id="@+id/layoutGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/labelTitle"
            style="@style/Theme.SmartDiary.DialogHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_5dp"
            android:text="@string/choose_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:fontFamily="@font/font_medium"
            android:gravity="center_horizontal"
            android:text="@string/Camera"
            android:textColor="@color/c_gray_11" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_10dp"
            android:fontFamily="@font/font_medium"
            android:gravity="center_horizontal"
            android:text="@string/gallery"
            android:textColor="@color/c_gray_11" />

        <View
            android:id="@+id/galleryView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/font_medium"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
