<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".ui.UserRegister">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@id/cardLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_25dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/size_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/size_15dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtWelcome"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:gravity="center"
                android:text="@string/register_user"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_50dp"
                android:layout_marginTop="@dimen/size_25dp"
                android:hint="@string/enter_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtWelcome">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c_white_1"
                    android:inputType="text"
                    android:maxLength="50" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtMobileNumber"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_50dp"
                android:layout_marginTop="@dimen/size_15dp"
                android:hint="@string/enter_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c_white_1"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtAddress"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_50dp"
                android:layout_marginTop="@dimen/size_15dp"
                android:hint="@string/enter_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMobileNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c_white_1"
                    android:inputType="text"
                    android:maxLength="100" />

            </com.google.android.material.textfield.TextInputLayout>

            <ToggleButton
                android:id="@+id/adminToggle"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_8dp"
                android:background="@drawable/toggle_background"
                android:textAllCaps="false"
                android:textOff="Admin"
                android:textOn="Admin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtAddress"
                app:layout_constraintWidth_percent="0.5" />

            <ToggleButton
                android:id="@+id/employeeToggle"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_marginStart="@dimen/size_8dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_8dp"
                android:background="@drawable/toggle_background"
                android:textAllCaps="false"
                android:textOff="Employee"
                android:textOn="Employee"
                app:layout_constraintStart_toEndOf="@id/adminToggle"
                app:layout_constraintTop_toBottomOf="@id/txtAddress"
                app:layout_constraintWidth_percent="0.5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignup"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_marginTop="@dimen/size_25dp"
                android:background="@color/purple_500"
                android:text="@string/sign_up"
                android:textColor="@color/c_white_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/adminToggle" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>